--- a/DropDownMenu/package.json
+++ b/DropDownMenu/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "mocha",
     "bs": "browser-sync start --server --files='*.html, js/*.js, css/*.css'",
-    "sass": "node-sass --output-style expanded scss/main.scss css/main.css"
+    "sass": "node-sass --watch --output-style expanded scss/main.scss css/main.css"
   },
   "author": "David White",
   "license": "ISC"
